syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";
import "google/protobuf/empty.proto";
//import "google/protobuf/timestamp.proto";
package CareerCloud.gRPC;
service CompanyJobEducation {
    rpc ReadCompanyJobEducation(IdRequestEducation) returns (CompanyJobEducationPayload);
	rpc CreateCompanyJobEducation(CompanyJobEducationPayload) returns (google.protobuf.Empty);
	rpc UpdateCompanyJobEducation(CompanyJobEducationPayload) returns (google.protobuf.Empty);
	rpc DeleteCompanyJobEducation(CompanyJobEducationPayload) returns (google.protobuf.Empty);
}

message IdRequestEducation{
		string Id=1;
	}

	message CompanyJobEducationPayload {
		 string Id = 1;
         string Job = 2;
         string Major = 3;
         int32 Importance = 4;
	}